--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                                         <a class="page-scroll" href="#portfolio">PORTFOLIO</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="page-scroll" href="#pricing">PRICING</a>
+                                        <a class="page-scroll" href="#pricing">P</a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="page-scroll" href="#testimonial">CLIENTS</a>
@@ -126,7 +126,8 @@
             <div class="row justify-content-center">
                 <div class="col-xl-6 col-lg-8">
                     <div class="about-image text-center wow fadeInUp" data-wow-duration="1.5s" data-wow-offset="100">
-                        <img src="assets/images/services.png" alt="services">
+                        <!--<img src="assets/images/services.png" alt="services"> -->
+                        <img src="assets/images/landing2.png" alt="services">
                     </div>
                     <div class="section-title text-center mt-30 pb-40">
                         <h4 class="title wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="0.6s">The Future of Engineering starts here</h4>
