--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                 <div class="col-lg-6">
                     <div class="single-about d-sm-flex mt-30 wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="1.2s">
                         <div class="about-icon">
-                            <img src="assets/images/icon-1.png" alt="Icon">
+                            <img src="assets/images/resources.png" alt="Icon">
                         </div>
                         <div class="about-content media-body">
                             <h4 class="about-title">Resources</h4>
@@ -151,7 +151,7 @@
                 <div class="col-lg-6">
                     <div class="single-about d-sm-flex mt-30 wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="1.4s">
                         <div class="about-icon">
-                            <img src="assets/images/icon-2.png" alt="Icon">
+                            <img src="assets/images/everyone.png" alt="Icon">
                         </div>
                         <div class="about-content media-body">
                             <h4 class="about-title">For everyone, Always!</h4>
@@ -162,7 +162,7 @@
                 <div class="col-lg-6">
                     <div class="single-about d-sm-flex mt-30 wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="1.6s">
                         <div class="about-icon">
-                            <img src="assets/images/icon-3.png" alt="Icon">
+                            <img src="assets/images/Mentors.png" alt="Icon">
                         </div>
                         <div class="about-content media-body">
                             <h4 class="about-title">Mentorship</h4>
@@ -173,7 +173,7 @@
                 <div class="col-lg-6">
                     <div class="single-about d-sm-flex mt-30 wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="1.8s">
                         <div class="about-icon">
-                            <img src="assets/images/icon-4.png" alt="Icon">
+                            <img src="assets/images/collab.png" alt="Icon">
                         </div>
                         <div class="about-content media-body">
                             <h4 class="about-title">Collaboration</h4>
