--- a/index.html
+++ b/index.html
@@ -216,12 +216,12 @@
             <div class="row grid">
                 <div class="col-lg-4 col-sm-6 philosophy-3">
                     <div class="single-portfolio mt-30 wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="0.2s">
-                        <div class="portfolio-image">
+                      <!--  <div class="portfolio-image">
                             <img src="assets/images/portfolio-1.png" alt="">
                             <div class="portfolio-overlay d-flex align-items-center justify-content-center">
 
                             </div>
-                        </div>
+                        </div>-->
                         <div class="portfolio-text">
                             <h4 class="portfolio-title"><a href="#">By Students! For Students! </a></h4>
                             <p class="text">Its designed and run by students for students.</p>
@@ -230,11 +230,11 @@
                 </div>
                 <div class="col-lg-4 col-sm-6 philosophy-3">
                     <div class="single-portfolio mt-30 wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="0.4s">
-                        <div class="portfolio-image">
+                       <!-- <div class="portfolio-image">
                             <img src="assets/images/portfolio-2.png" alt="">
                             <div class="portfolio-overlay d-flex align-items-center justify-content-center">
                             </div>
-                        </div>
+                        </div>-->
                         <div class="portfolio-text">
                             <h4 class="portfolio-title"><a href="#">Failure is celebrated</a></h4>
                             <p class="text">You dont need to have the greatest idea, the biggest brains or fancy tech. If you have any idea/interest, CIA will help make that a reality.</p>
@@ -243,11 +243,11 @@
                 </div>
                 <div class="col-lg-4 col-sm-6 philosophy-3">
                     <div class="single-portfolio mt-30 wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="0.7s">
-                        <div class="portfolio-image">
+                      <!--  <div class="portfolio-image">
                             <img src="assets/images/portfolio-3.png" alt="">
                             <div class="portfolio-overlay d-flex align-items-center justify-content-center">
                             </div>
-                        </div>
+                        </div>-->
                         <div class="portfolio-text">
                             <h4 class="portfolio-title"><a href="#">For Everyone</a></h4>
                             <p class="text">We belive the future of engineering is the confluence of all domains, CIA is always for students of all domains.</p>
@@ -256,11 +256,11 @@
                 </div>
                 <div class="col-lg-4 col-sm-6 philosophy-3">
                     <div class="single-portfolio mt-30 wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="0.2s">
-                        <div class="portfolio-image">
+                      <!--  <div class="portfolio-image">
                             <img src="assets/images/portfolio-4.png" alt="">
                             <div class="portfolio-overlay d-flex align-items-center justify-content-center">
                             </div>
-                        </div>
+                        </div>-->
                         <div class="portfolio-text">
                             <h4 class="portfolio-title"><a href="#">Bridge Industry - Education Gap</a></h4>
                             <p class="text">It takes many years for the lastest tech to reach academin books, CIA is the platform to explore the lastest trends in Enginnering</p>
