--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
                     <div class="col-lg-12">
                         <nav class="navbar navbar-expand-lg">
                             <a class="navbar-brand" href="#">
-                                <img src="assets/images/logo.png" alt="Logo">
+                                <!--<img src="assets/images/logo.png" alt="Logo">-->
+                                <h2 style="color: white">CIA</h2>
                             </a>
 
                             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarEight" aria-controls="navbarEight" aria-expanded="false" aria-label="Toggle navigation">
@@ -130,8 +131,10 @@
                         <img src="assets/images/landing2.png" alt="services">
                     </div>
                     <div class="section-title text-center mt-30 pb-40">
-                        <h4 class="title wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="0.6s">The Future of Engineering starts here</h4>
-                        <p class="text wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="1s">An open platform for Students to collaborate on engineering problems. Are you a Visioneer ?</p>
+                            
+                        <h4 class="title wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="0.8s">The Future of Engineering starts here</h4>
+                                          <p class="text wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="1s">An open platform for Students to collaborate on engineering problems. Are you a Visioneer ?</p>
+
                     </div> <!-- section title -->
                 </div>
             </div> <!-- row -->
